syntax = "proto3";
package Core;

// Result
enum ResultType{    
    Succeed = 0;
    Error = 1;
    Warning = 2;
    Retry = 3;
    Invalid = 4;
}

// LogLevel
enum LogLevel{
    All = 0;
    Verbos = 1;
    Debug = 2;
    Info = 3;
    Warn = 4;
    Err = 5;
    Assert = 6;
    Fatal = 7;  
}

enum DATA_ITEM
{
    ServerConfiguation=0;
	ModuleConfiguation=1;
	Logger=2;
	RuntimeData=3;
}

message DataPackage
{
    enum PackageType{
        RequestPackage=0;
        EventPackage=1;
    }
    int32 Type = 1;
    // In request pacakge, it's function id.
    // In event package, it's event id
    int32 Function = 2;
    // 优先级
    int32 PriorityLevel = 3;
    // 流水号
    int64 SerialNumber = 4;
    // 校验串
    string CheckString = 5;
    // 发送者的唯一标识符
    string Sender = 6;
    // 结果代码
    ResultType Result = 7;
    // 消息内容
    string Content = 8;
    // 扩展数据，通常没用。但是一旦设置了这个字段则认为该包是BigPackage，直接进入队列而不是直接发送
    bytes Extend = 9;
}

message GLOBAL_CONFIG
{
    // Network 
    int32   ListenPort = 1;
    bool    EnableSSL=2;
    string  CertFilePath=3;
    string  KeyFilePath=4;
    string  CertPasswd=5;
    int32   ConnectTime=6;
    int32   ReceiveTime=7;

    // Log 
    string  LogPath = 8;
    LogLevel   LogLevel =9 ;
    bool    DebugMode = 10;

    // Performance
    int32   MQThreadQuantity =11;// Message queue work thread quantity 
    int32   EPollThreadQuantity=12;// EPoll event process thread quantity
    int32   ProcessThreadQuantity=13;// work thread for DataPackage process quantity
    int32   PrioritySize=14;// Priority Size for the list. the priority level cannot bigger than this value.

    // Module
    string  ModuleName = 16;
    string  ModulePath = 17;
    bytes   ModuleConfig = 18;
    string  ModuleReference = 19;
};

message RuntimeDataPackage
{
    string ManagerAddress=1;
	int32 ManagerPort=2;
	int32 TemplateID=3;
    string NodeUUID=4;
	GLOBAL_CONFIG TemplateConfig=5;
}