syntax = "proto3";
package Manager;



enum Events{
   ReferenceModuleOnline=0;
   ReferenceModuleOffline=1;
}

message ReferenceModuleOnlineEvent{
   string Address=1;
   int32 Port=2;
}

message ReferenceModuleOfflineEvent{
   string Address=1;
   int32 Port=2;
}

enum Functions{
    /* Flow: All -> All
       Response: Content - result with JSON string. 
    */
    RegisteWorker=0;
    /* Flow: All -> Control
       Response: post log message to control
    */
    PostLog=1;
    /* Flow:  All -> Control
       Response: Content(string) - the uuid for sender.
                 Extend: config data
    */
    RegisteServer=2;
    /* Flow: Control -> All
       Request: 
       Response: NO
    */
    RestartService=4;
}

message RegisteWorkerMessage
{

}

message PostLogMessage
{

}


